// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should not render with invalid styles when also passed the disabled prop 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-5::-ms-expand {
  display: none;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-6 {
  display: none;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-7 {
  display: none;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_9"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <select
      aria-describedby="validation-hint_10"
      aria-invalid="true"
      class="circuit-5"
      disabled=""
      id="select_9"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select should render with a prefix when passed the prefix prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  display: block;
  position: absolute;
  z-index: 21;
  height: 48px;
  width: 48px;
  padding: 16px;
  pointer-events: none;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-6:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-6::-ms-expand {
  display: none;
}

.circuit-6:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-6:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-6:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-7 {
  display: none;
}

.circuit-8 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-8 {
  display: none;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_13"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <div
      class="circuit-5"
      style="width: 24px; height: 24px;"
    />
    <select
      aria-describedby="validation-hint_14"
      class="circuit-6"
      id="select_13"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-8"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select should render with a tooltip when passed a validation hint 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-5::-ms-expand {
  display: none;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-6 {
  display: none;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-7 {
  display: none;
}

.circuit-8 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_11"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <select
      aria-describedby="validation-hint_12"
      class="circuit-5"
      id="select_11"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
  <span
    class="circuit-8"
    id="validation-hint_12"
  >
    This field is required.
  </span>
</div>
`;

exports[`Select should render with a visually-hidden label 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-5::-ms-expand {
  display: none;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-6 {
  display: none;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-7 {
  display: none;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_3"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <select
      aria-describedby="validation-hint_4"
      class="circuit-5"
      id="select_3"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select should render with default styles 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-5::-ms-expand {
  display: none;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-6 {
  display: none;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-7 {
  display: none;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_1"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <select
      aria-describedby="validation-hint_2"
      class="circuit-5"
      id="select_1"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-5:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-5::-ms-expand {
  display: none;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-6 {
  display: none;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-7 {
  display: none;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_5"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <select
      aria-describedby="validation-hint_6"
      class="circuit-5"
      disabled=""
      id="select_5"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select should render with invalid styles when passed the invalid prop 1`] = `
.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-4 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  padding-right: 56px;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-5:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-5::-ms-expand {
  display: none;
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-5:active {
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-6 {
  display: none;
}

.circuit-7 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-7 {
  display: none;
}

<div
  class="circuit-0"
>
  <label
    class="circuit-1"
    for="select_7"
  >
    <span
      class="circuit-2 circuit-3"
    >
      Label
    </span>
  </label>
  <div
    class="circuit-4"
  >
    <select
      aria-describedby="validation-hint_8"
      aria-invalid="true"
      class="circuit-5"
      id="select_7"
    >
      <option
        value=""
      />
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-7"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
